# goIt-homework-mongo-rabbidmq

./: config.ini  connect.py  pyproject.toml
part_1/: main.py  models.py  queries.py  seeds.py
part_2/: connect_queue.py  consumer.py  model.py  producer.py
