[tool.poetry]
name = "goit-homework-mongo"
version = "0.1.0"
description = ""
authors = ["the10or <the10or@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.27.0"
faker = "^21.0.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
